# bunga-server

./: .gitignore  README.md  dump.rdb  main.py  manage.sh  middleware.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
bunga/: manage.py  manage.sh  requirements
bunga/bunga/: asgi.py  auth.py  local_settings.template.py  middlewares.py  renderers.py  settings.py  urls.py  workers.py  wsgi.py
bunga/chat/: consumers.py  middlewares.py  urls.py
bunga/logs/: django.log.2025-11-16  django.log.2025-11-17
bunga/media/subtitles/: Prison_oQeFscD.1988.1080p.BluRay.x264-GECKOS.chs.srt  The_Lemon_Drop_Kid_1951_zIekTmw.srt
bunga/server/: admin.py  channel_cache.py  consumers.py  forms.py  middlewares.py  mixins.py  models.py  schemas.py  serializers.py  services.py  urls.py
bunga/server/chat/: channel_cache.py  channel_manager.py  consumers.py  multition_meta.py  schemas.py  utils.py
bunga/server/migrations/: 0001_initial.py  0002_alisthost_remove_site_alist_host.py  0003_alter_alistaccount_password_and_more.py  0004_subtitle_name.py  0005_alter_subtitle_record.py  0006_alter_subtitle_record.py  0007_videorecord_position.py  0008_videorecord_path_videorecord_source_and_more.py  0009_remove_videorecord_position_playstatus.py  0010_alter_playstatus_position.py  0011_videorecord_position_delete_playstatus.py  0012_rename_thumburl_videorecord_thumb_url.py  0013_alter_videorecord_thumb_url.py  0014_alter_videorecord_thumb_url.py  0016_channel_name.py  (+2 more)
bunga/utils/: datetime.py  log.py
pages/api/: video-parse.ts
pages/bilibili/: login.tsx
(+54 files in other folders)
