[project]
name = "bunga-server"
version = "0.1.0"
description = "A 'watch together' player built with Flutter and Django-Channels"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref>=3.11.1",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.2",
    "django-bootstrap5>=26.2",
    "django-debug-toolbar>=6.2.0",
    "django-solo>=2.5.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-types>=0.23.0",
    "djangorestframework-types>=0.9.0",
]
